String.isBlank() is Java 11 only
I (foolishly) assumed that setting the compile target to 1.8 would
handle it but that is apparently not the case.

Also update the Sample Service client.